# wangLandauNew

./: .gitignore  CMakeLists.txt  Hamiltonians.h  MagneticSystem.cpp  MagneticSystem.h  debug_msg.cpp  debug_msg.h  dos2.cpp  dos2.h  gapmanager.cpp  gapmanager.h  main.cpp  misc.cpp  misc.h  readme.md  stringfunctions.h  wangLandauNew.pro  wlNew.cpp  wlNew.h
test_apamea/: apamea_2_2.mfsys  apamea_4_4.mfsys  apamea_6_6.mfsys  apamea_8_8.mfsys  apamea_N1280_0.out  apamea_N320_0.out  apamea_N720_0.out  apamea_N80_0.out  average.c  mfsys_csv.ipynb  systemGenerator.rar
